<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp">

    <!-- Boton dialogo alerta -->
    <Button
        android:id="@+id/btnAlertDialog"
        android:text="@string/btnAlertDialog"
        android:onClick="onClick"
        android:backgroundTint="@android:color/holo_green_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- Boton dialogo progreso -->
    <Button
        android:id="@+id/btnProgressDialog"
        android:text="@string/btnProgressDialog"
        android:onClick="onClick"
        android:backgroundTint="@android:color/holo_orange_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- Boton dialogo simple -->
    <Button
        android:id="@+id/btnSimpleDialog"
        android:text="@string/btnSimpleDialog"
        android:onClick="onClick"
        android:backgroundTint="@android:color/holo_blue_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- Boton dialogo lista -->
    <Button
        android:id="@+id/btnListDialog"
        android:text="@string/btnListDialog"
        android:onClick="onClick"
        android:backgroundTint="@android:color/holo_red_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- Boton dialogo radio button -->
    <Button
        android:id="@+id/btnRadioButtonDialog"
        android:text="@string/btnRadioButtonDialog"
        android:onClick="onClick"
        android:backgroundTint="@android:color/holo_green_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- Boton dialog checked -->
    <Button
        android:id="@+id/btnCheckedDialog"
        android:text="@string/btnCheckedDialog"
        android:onClick="onClick"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- Boton dialogo personalizado -->
    <Button
        android:id="@+id/btnPersoDialog"
        android:text="@string/btnPersoDialog"
        android:onClick="onClick"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- Boton dialogo date picker -->
    <Button
        android:id="@+id/btnDatePickerDialog"
        android:text="@string/btnDatePickerDialog"
        android:onClick="onClick"
        android:backgroundTint="@android:color/holo_red_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- Boton dialogo time picker -->
    <Button
        android:id="@+id/btnTimePickerDialog"
        android:text="@string/btnTimePickerDialog"
        android:onClick="onClick"
        android:backgroundTint="@android:color/holo_purple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>