<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Usuario -->
    <EditText
        android:id="@+id/etUser"
        android:hint="@string/etUser"
        android:ems="10"
        android:textSize="20dp"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- Contraseña -->
    <EditText
        android:id="@+id/etPass"
        android:hint="@string/etPass"
        android:ems="10"
        android:textSize="20dp"
        android:layout_margin="15dp"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- Boton login -->
    <Button
        android:visibility="invisible"
        android:text="@string/btnLogin"
        android:id="@+id/btnLogin"
        android:layout_margin="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>